--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -5,8 +5,16 @@
     <%= render "devise/shared/error_messages", resource: resource %>
 
     <div class="profile">
+    <img id="profile-img-prev" src="#" class='hidden' />
+    <% if @user.profile_image.url.nil? %>
       <div class="profile-default-img"></div>
-    </div>
+    <% else %>
+      <%= image_tag @user.profile_image.url, class: "profile-img", id: "profile-img" %>
+    <% end %>
+    <label class="profile-img-upload">
+      <%= f.file_field :profile_image, id: "profile_image_upload" %>ファイルを選択
+    </label>
+  </div>
 
     <div class="form-group">
       <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control", placeholder: "メールアドレス" %>
