--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -1,3 +1,7 @@
-// Place all the styles related to the top controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
+header{
+  padding: 7rem 0 !important;
+  background-image: url('keyv.jpg');
+  background-size: cover;
+  color: white;
+}
+  
