--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,9 +1,7 @@
-<div class="sign-up-page">
-  <div class="card">
-    <div class="card-header">
-      アカウントを作成する
-    </div>
-    <div class="card-body">
+<div class="container login-container">
+  <div class="row justify-content-center">
+    <div class="col-md-8 login-form">
+      <h3>アカウントを作成する</h3>
       <%= form_with scope: resource, as: resource_name, url: registration_path(resource_name), local: true do |f| %>
         <%= render "devise/shared/error_messages", resource: resource %>
         <div class="form-group">
@@ -12,20 +10,19 @@
         <div class="form-group">
           <%= f.email_field :email, autocomplete: "email", class: "form-control", placeholder: "メールアドレス" %>
         </div>
-       
         <div class="form-group">
           <%= f.password_field :password, autocomplete: "new-password", class: "form-control", placeholder: "パスワード" %>
         </div>
-        <div class="field">
+        <div class="form-group">
           <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control", placeholder: "確認用パスワード"%>
         </div>
-        <div class="text-center">
-          <%= f.submit "はじめる", class: "btn btn-info text-white" %>
+        <div class="form-group">
+          <%= f.submit "はじめる", class: "btnSubmit" %>
+        </div>
+        <div class="form-group">
+          <%= render "devise/shared/links" %>
         </div>
       <% end %>
-      <div class="mt-3">
-        <%= render "devise/shared/links" %>
-      </div>
     </div>
   </div>
 </div>
