--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,20 +1,81 @@
+<header class="border-bottom mb-4">
 <div class="container">
- <h3>登録済み一覧</h3>
-  <table class="table">
-    <thead>
-      <tr>
-        <td> マッチ</td> 
-        <td> 日付</td>
-        <td> 開始時間</td> 
-        <td> 場所</td> 
-      </tr>
-    </thead>
-    <% @event_listings.each do |event_listing| %>
-      <tr>
-        <td> <%= link_to event_listing.capacity, event_listing %> </td>
-        <td> <%= event_listing.deadline %> </td> 
-        <td> <%= event_listing.message %> </td> 
-      </tr>
-    <% end %>
-  </table>
+    <div class="text-center my-5">
+        <h1 class="fw-bolder">ドラゴンズをもっと楽しく。<br>あなたの観戦体験を一緒にシェアしよう！</h1>
+        <p class="lead mb-0">A Bootstrap 5 starter layout for your next blog homepage</p>
+    </div>
+</div>
+</header>
+<!-- Page content-->
+<div class="container">
+<div class="row">
+    <!-- Blog entries-->
+     
+    <div class="col-lg-8">
+        <!-- Featured blog post-->
+        <% @event_listings.each do |event_listing| %>
+        <div class="card mb-4">
+            <div class="card-body">
+                <div class="small text-muted">January 1, 2023</div>
+                <h2 class="card-title">Featured Post Title</h2>
+                <p class="card-text"> <%= event_listing.message %></p>
+                <%= link_to event_listing.capacity, event_listing,class:"btn btn-primary"%>
+            </div>
+        </div>
+       <% end %>
+        <!-- Pagination-->
+        <nav aria-label="Pagination">
+            <hr class="my-0" />
+            <ul class="pagination justify-content-center my-4">
+                <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1" aria-disabled="true">Newer</a></li>
+                <li class="page-item active" aria-current="page"><a class="page-link" href="#!">1</a></li>
+                <li class="page-item"><a class="page-link" href="#!">2</a></li>
+                <li class="page-item"><a class="page-link" href="#!">3</a></li>
+                <li class="page-item disabled"><a class="page-link" href="#!">...</a></li>
+                <li class="page-item"><a class="page-link" href="#!">15</a></li>
+                <li class="page-item"><a class="page-link" href="#!">Older</a></li>
+            </ul>
+        </nav>
+    </div>
+    <!-- Side widgets-->
+    <div class="col-lg-4">
+        <!-- Search widget-->
+        <div class="card mb-4">
+            <div class="card-header">Search</div>
+            <div class="card-body">
+                <div class="input-group">
+                    <input class="form-control" type="text" placeholder="Enter search term..." aria-label="Enter search term..." aria-describedby="button-search" />
+                    <button class="btn btn-primary" id="button-search" type="button">Go!</button>
+                </div>
+            </div>
+        </div>
+        <!-- Categories widget-->
+        <div class="card mb-4">
+            <div class="card-header">Categories</div>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <ul class="list-unstyled mb-0">
+                            <li><a href="#!">Web Design</a></li>
+                            <li><a href="#!">HTML</a></li>
+                            <li><a href="#!">Freebies</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-6">
+                        <ul class="list-unstyled mb-0">
+                            <li><a href="#!">JavaScript</a></li>
+                            <li><a href="#!">CSS</a></li>
+                            <li><a href="#!">Tutorials</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Side widget-->
+        <div class="card mb-4">
+            <div class="card-header">Side Widget</div>
+            <div class="card-body">You can put anything you want inside of these side widgets. They are easy to use, and feature the Bootstrap 5 card component!</div>
+        </div>
+    </div>
+</div>
 </div>
