--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,30 +1,29 @@
-<div class="user-show-page">
 
-
-  <div class="profile mt-4">
-    <div class="profile-default-img"></div>
-
-    <div class="profile-name mt-4">
-      <%= @user.name %>
-    </div>
-
-  </div>
-  <div class="profile-text">
-    <%= @user.self_introduction %>
-  </div>
-
-  <% if current_user.id == @user.id %>
-    <div class="user-action">
-      <div class="user-action-common">
-        <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-      </div>
-      <div class="user-action-common">
-        <%= link_to "#" do %>
-          <i class="fas fa-pencil-alt fa-2x"></i>
-        <% end %>
-        <%= link_to "ユーザー編集", edit_user_registration_path %>
-      </div>
-    </div>
-  <% end %>
-
-</div>
+<div class="container emp-profile">
+       <form method="post">
+           <div class="row">
+               <div class="col-md-4">
+                   <div class="profile-img">
+                   <%= image_tag @user.profile_image.url %>
+                   </div>
+               </div>
+               <div class="col-md-6">
+                   <div class="profile-head">
+                               <h5>
+                                 <%= @user.name %>
+                               </h5>
+                               <p>
+                                  ファン歴： <%=@user.fan_years %>
+                               </p>
+                               <p>
+                                  好きな選手： <%=@user.favorite_player %>
+                               </p>
+                               <p class="proile-rating"><%= @user.self_introduction %></p>
+                   </div>
+               </div>
+               <div class="col-md-2">
+                <%= link_to "ユーザー編集", edit_user_registration_path,class:"profile-edit-btn"%>
+               </div>
+           </div>
+       </form>           
+   </div>
