--- a/app/views/event_listings/show.html.erb
+++ b/app/views/event_listings/show.html.erb
@@ -1,16 +1,45 @@
-<div class="container my-5">
-<h3>予約内容の確認</h3>
-
-<p><strong>募集定員:</strong> <%= @event_listing.capacity %></p>
-<p><strong>募集締切:</strong> <%= @event_listing.deadline %></p>
-<p><strong>メッセージ:</strong> <%= @event_listing.message %></p>
-
-<div class="col-md-6 col-md-offset-3">
-<%= form_with(model: @event_listing.event_registrations.build,local: true) do |f| %>
-  <%= f.hidden_field :event_listing_id, value: @event_listing.id %>
-  <%= f.label :comment,class: "form-label" %>
-  <%= f.text_field :comment,class: "form-control"  %>
-  <%= f.submit "参加する", class: "btn btn-primary my-2 " %>
-<% end %>
-</div>
+<div class="container">
+  <main>
+    <div class="row py-5 justify-content-center">
+      <div class="col-md-6 col-lg-8">
+        <div class="row">
+          <div class="col-lg-6"> 
+            <div class="card border border-info shadow-0 mb-3">
+              <div class="card-header">
+                <span><%= @event_listing.event.date.strftime("%m/%d") %></span>
+                <span><%= @event_listing.event.start_time.strftime("%H:%M") %>~</span>
+                <span><%= "#{@event_listing.event.match}  (#{@event_listing.event.location})" %></span>
+              </div>
+              <div class="card-body">
+                <div class="card-title">
+                  <%= image_tag @event_listing.user.profile_image.url, style: "width: 45px; height: 45px", class: "rounded-circle" %>
+                  <%= link_to @event_listing.user.name, @event_listing.user %>
+                </div>
+                <h5 class="card-title"> <%= @event_listing.title %></h5>
+                <p class="card-text"> <%= @event_listing.message %></p>
+              </div>
+              <div class="card-footer">チケット有<span><%= @event_listing.deadline %></span></div>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <%= form_with(model: @event_listing.event_registrations.build, local: true) do |f| %>
+              <%= f.hidden_field :event_listing_id, value: @event_listing.id %>
+              <%= f.label :comment, "参加コメント", class: "form-label" %>
+              <%= f.text_field :comment, class: "form-control" %>
+              <hr class="my-2">
+              <h6>参加メンバー</h6>
+              <% @event_listing.event_registrations.each do |event_registration| %>
+                <% if event_registration.user.present? %>
+                  <%= image_tag event_registration.user.profile_image.url, style: "width: 45px; height: 45px", class: "rounded-circle" %>
+                  <%= link_to event_registration.user.name, event_registration.user %>
+                <% end %>
+              <% end %>
+              <hr class="my-2">          
+              <%= f.submit "参加する", class: "w-100 btn btn-primary btn-lg" %>
+            <% end %>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
 </div>
