--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,89 +1,85 @@
 <header class="border-bottom mb-4">
-<div class="container">
+  <div class="container">
     <div class="text-center my-5">
-        <h1 class="fw-bolder">ドラゴンズをもっと楽しく。<br>あなたの観戦体験を一緒にシェアしよう！</h1>
-        <p class="lead mb-0">A Bootstrap 5 starter layout for your next blog homepage</p>
+      <h1 class="fw-bolder">ドラゴンズをもっと楽しく。<br>あなたの観戦体験を一緒にシェアしよう！</h1>
     </div>
-</div>
+  </div>
 </header>
-<!-- Page content-->
 <div class="container">
-<div class="row">
+  <div class="row">
     <div class="col-lg-8">
-        <!-- Featured blog post-->
-        <div class="row">
+      <div class="row">
         <% @event_listings.each do |event_listing| %>
-         
-           <div class="col-lg-6">
+          <div class="col-lg-6">
             <div class="card mb-4">
               <div class="card-body">
-                  <h5 class="card-header"><%= event_listing.event.date.strftime("%m/%d") %>  <%= event_listing.event.start_time.strftime("%H:%M") %>~  <%= event_listing.event.location %></h5>
-                  <div class="card-body">
-                    <h5 class="card-title"><%= event_listing.title %></h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <%= link_to "残り#{event_listing.capacity-event_listing.event_registrations.count}人 募集中", event_listing,class:"btn btn-primary"%>
-                
-                  </div>
-                 
+                <h6 class="card-header">
+                <span><%= event_listing.event.date.strftime("%m/%d") %></span>
+                <span><%= event_listing.event.start_time.strftime("%H:%M") %>~</span>
+                <span><%= "#{event_listing.event.match}  (#{event_listing.event.location})" %></span>
+                </h6>
+                <div class="card-body">
+                  <h5 class="card-title"><%= event_listing.title %></h5>
+                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                  <%= link_to "残り#{event_listing.capacity-event_listing.event_registrations.count}人 募集中", event_listing,class:"btn btn-primary"%>
+                </div>
               </div>
             </div>
-          </div>  
-         
-       <% end %>
-       </div>
-        <!-- Pagination-->
-        <nav aria-label="Pagination">
-            <hr class="my-0" />
-            <ul class="pagination justify-content-center my-4">
-                <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1" aria-disabled="true">Newer</a></li>
-                <li class="page-item active" aria-current="page"><a class="page-link" href="#!">1</a></li>
-                <li class="page-item"><a class="page-link" href="#!">2</a></li>
-                <li class="page-item"><a class="page-link" href="#!">3</a></li>
-                <li class="page-item disabled"><a class="page-link" href="#!">...</a></li>
-                <li class="page-item"><a class="page-link" href="#!">15</a></li>
-                <li class="page-item"><a class="page-link" href="#!">Older</a></li>
-            </ul>
-        </nav>
+          </div>
+        <% end %>
+      </div>
+      <nav aria-label="Pagination">
+        <hr class="my-0" />
+        <ul class="pagination justify-content-center my-4">
+          <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1" aria-disabled="true">Newer</a></li>
+          <li class="page-item active" aria-current="page"><a class="page-link" href="#!">1</a></li>
+          <li class="page-item"><a class="page-link" href="#!">2</a></li>
+          <li class="page-item"><a class="page-link" href="#!">3</a></li>
+          <li class="page-item disabled"><a class="page-link" href="#!">...</a></li>
+          <li class="page-item"><a class="page-link" href="#!">15</a></li>
+          <li class="page-item"><a class="page-link" href="#!">Older</a></li>
+        </ul>
+      </nav>
     </div>
-    <!-- Side widgets-->
     <div class="col-lg-4">
-        <!-- Search widget-->
-        <div class="card mb-4">
-            <div class="card-header">Search</div>
-            <div class="card-body">
-                <div class="input-group">
-                    <input class="form-control" type="text" placeholder="Enter search term..." aria-label="Enter search term..." aria-describedby="button-search" />
-                    <button class="btn btn-primary" id="button-search" type="button">Go!</button>
-                </div>
+      <div class="card mb-4">
+        <%= search_form_for @q, url: search_events_path do |f| %>
+          <div class="card-body">
+            <%= f.search_field :match_or_location_cont,class: "form-control",placeholder:"例：巨人,バンテリンドーム..." %>
+            <div class="form-control">
+              <%= f.date_field :date_gteq %>
+              <span>~</span>
+              <%= f.date_field :date_lteq %>
             </div>
-        </div>
-        <!-- Categories widget-->
-        <div class="card mb-4">
-            <div class="card-header">Categories</div>
-            <div class="card-body">
-                <div class="row">
-                    <div class="col-sm-6">
-                        <ul class="list-unstyled mb-0">
-                            <li><a href="#!">Web Design</a></li>
-                            <li><a href="#!">HTML</a></li>
-                            <li><a href="#!">Freebies</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-6">
-                        <ul class="list-unstyled mb-0">
-                            <li><a href="#!">JavaScript</a></li>
-                            <li><a href="#!">CSS</a></li>
-                            <li><a href="#!">Tutorials</a></li>
-                        </ul>
-                    </div>
-                </div>
+            <%= f.submit "検索", class: "btn btn-primary form-control" %>
+          </div>
+        <% end %>
+      </div>
+      <div class="card mb-4">
+        <div class="card-header">Categories</div>
+        <div class="card-body">
+          <div class="row">
+            <div class="col-sm-6">
+              <ul class="list-unstyled mb-0">
+                <li><a href="#!">Web Design</a></li>
+                <li><a href="#!">HTML</a></li>
+                <li><a href="#!">Freebies</a></li>
+              </ul>
             </div>
+            <div class="col-sm-6">
+              <ul class="list-unstyled mb-0">
+                <li><a href="#!">JavaScript</a></li>
+                <li><a href="#!">CSS</a></li>
+                <li><a href="#!">Tutorials</a></li>
+              </ul>
+            </div>
+          </div>
         </div>
-        <!-- Side widget-->
-        <div class="card mb-4">
-            <div class="card-header">Side Widget</div>
-            <div class="card-body">You can put anything you want inside of these side widgets. They are easy to use, and feature the Bootstrap 5 card component!</div>
-        </div>
+      </div>
+      <div class="card mb-4">
+        <div class="card-header">Side Widget</div>
+        <div class="card-body">You can put anything you want inside of these side widgets. They are easy to use, and feature the Bootstrap 5 card component!</div>
+      </div>
     </div>
-</div>
+  </div>
 </div>
