shimをパーシャル化

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title,ユーザー編集)%>
 <%= render "devise/shared/error_messages", resource: resource %>
 <div class="container emp-profile">
   <%= form_with scope: resource, as: resource_name, url: registration_path(resource_name), local: true, method: :patch, class: "px-3" do |f| %>
