--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -11,20 +11,7 @@
       <div class="row">
         <% @event_listings.each do |event_listing| %>
           <div class="col-lg-6">
-            <div class="card mb-4">
-              <div class="card-body">
-                <h6 class="card-header">
-                <span><%= event_listing.event.date.strftime("%m/%d") %></span>
-                <span><%= event_listing.event.start_time.strftime("%H:%M") %>~</span>
-                <span><%= "#{event_listing.event.match}  (#{event_listing.event.location})" %></span>
-                </h6>
-                <div class="card-body">
-                  <h5 class="card-title"><%= event_listing.title %></h5>
-                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                  <%= link_to "残り#{event_listing.capacity-event_listing.event_registrations.count}人 募集中", [event_listing.event,event_listing],class:"btn btn-primary"%>
-                </div>
-              </div>
-            </div>
+            <%= render 'shared/event_listing_card', event_listing: event_listing %>
           </div>
         <% end %>
       </div>
