--- a/app/views/shared/_message.html.erb
+++ b/app/views/shared/_message.html.erb
@@ -1,6 +1,3 @@
-<% if flash[:notice] %>
-  <p><%= flash[:notice] %></p>
-<% end %>
-<% if flash[:alert] %>
-  <p><%= flash[:alert] %></p>
+<% flash.each do |message_type, message| %>
+  <div class="alert <%= bootstrap_class_for(message_type) %> text-center"><%= message %></div>
 <% end %>
