参加ボタンの制御

--- a/app/assets/stylesheets/cusstom.scss
+++ b/app/assets/stylesheets/cusstom.scss
@@ -5,3 +5,10 @@
 .alert{
   margin-bottom: 0 !important;
 }
+.card-image{
+  width: 45px;
+  height: 45px;
+}
+.user-name {
+  text-decoration: none;
+}
