--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,29 +1,52 @@
-
+<% provide(:title,'ユーザー詳細') %>
 <div class="container emp-profile">
-       <form method="post">
-           <div class="row">
-               <div class="col-md-4">
-                   <div class="profile-img">
-                   <%= image_tag @user.profile_image.url %>
-                   </div>
-               </div>
-               <div class="col-md-6">
-                   <div class="profile-head">
-                               <h5>
-                                 <%= @user.name %>
-                               </h5>
-                               <p>
-                                  ファン歴： <%=@user.fan_years %>
-                               </p>
-                               <p>
-                                  好きな選手： <%=@user.favorite_player %>
-                               </p>
-                               <p class="proile-rating"><%= @user.self_introduction %></p>
-                   </div>
-               </div>
-               <div class="col-md-2">
-                <%= link_to "ユーザー編集", edit_user_registration_path,class:"profile-edit-btn"%>
-               </div>
-           </div>
-       </form>           
-   </div>
+  <div class="row justify-content-end">
+    <div class="col-md-2">
+      <%= link_to "ユーザー編集", edit_user_registration_path, class: "profile-edit-btn" %>
+    </div>
+  </div>
+  <hr class="mb-4">
+  <div class="row">
+    <div class="col-md-4">
+      <div class="profile-img">
+        <%= image_tag @user.profile_image.url %>
+      </div>
+    </div>
+    <div class="col-md-8">
+      <div class="profile-tab">
+        <div class="row">
+          <div class="col-md-4">
+            <label>ユーザー名</label>
+          </div>
+          <div class="col-md-8">
+            <p><%= @user.name %></p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <label>ファン歴</label>
+          </div>
+          <div class="col-md-8">
+            <p><%= "#{@user.fan_years}年" %></p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <label>好きな選手</label>
+          </div>
+          <div class="col-md-8">
+            <p><%= @user.favorite_player %></p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <label>自己紹介</label>
+          </div>
+          <div class="col-md-8">
+            <p><%= @user.self_introduction %></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
