--- a/app/views/event_listings/show.html.erb
+++ b/app/views/event_listings/show.html.erb
@@ -2,14 +2,17 @@
 <div class="container">
   <main>
     <div class="row py-5 justify-content-center">
-      <div class="col-md-6 col-lg-8">
-        <div class="row">
-          <div class="col-lg-6"> 
+      <div class="col-lg-8">
+        <div class="row justify-content-center">
+          <div class="col-lg-9"> 
             <div class="card border border-info shadow-0 mb-3">
-              <div class="card-header">
-                <span><%= @event_listing.event.date.strftime("%m/%d") %></span>
-                <span><%= @event_listing.event.start_time.strftime("%H:%M") %>~</span>
-                <span><%= "#{@event_listing.event.match}  (#{@event_listing.event.location})" %></span>
+              <div class="card-header d-flex justify-content-between">
+                <span>
+                <%= "#{@event_listing.event.date.strftime("%m/%d")}  #{@event_listing.event.start_time.strftime("%H:%M")}〜" %>
+                </span>
+                <span>
+                <%= "#{@event_listing.event.match}  (#{@event_listing.event.location})" %>
+                </span>
               </div>
               <div class="card-body">
                 <div class="card-title">
@@ -19,16 +22,19 @@
                 <h5 class="card-title"> <%= @event_listing.title %></h5>
                 <p class="card-text"> <%= @event_listing.message %></p>
               </div>
-              <div class="card-footer">チケット有<span><%= @event_listing.deadline %></span></div>
+              <div class="card-footer d-flex justify-content-between">
+              <span><%= @event_listing.has_ticket ? "チケット有" : "チケット無" %></span>
+              <span><%= "締切  #{@event_listing.deadline.strftime("%m/%d")}" %></span>
+              </div>
             </div>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-9">
             <%= form_with(model: @event_listing.event_registrations.build, local: true) do |f| %>
               <%= f.hidden_field :event_listing_id, value: @event_listing.id %>
               <%= f.label :comment, "参加コメント", class: "form-label" %>
               <%= f.text_field :comment, class: "form-control" %>
               <hr class="my-2">
-              <h6>参加メンバー</h6>
+              <h6><%= "参加メンバー(募集人数#{@event_listing.capacity}人)" %></h6>
               <% @event_listing.event_registrations.each do |event_registration| %>
                 <% if event_registration.user.present? %>
                   <%= image_tag event_registration.user.profile_image.url, class: "card-image rounded-circle" %>
@@ -38,9 +44,11 @@
               <% end %>
               <hr class="my-2">
               <% if current_user &&(current_user == @event_listing.user || @event_listing.event_registrations.any? { |r| r.user == current_user }) %>
-              <%= f.submit "参加済", class: "w-100 btn btn-primary btn-lg",disabled: true %>
+                <%= f.submit "参加済", class: "w-100 btn btn-primary btn-lg",disabled: true %>
+              <% elsif @event_listing.capacity-@event_listing.event_registrations.count == 0 %>
+                <%= f.submit "募集終了", class: "w-100 btn btn-primary btn-lg",disabled: true %>
               <% else %>
-              <%= f.submit "参加する", class: "w-100 btn btn-primary btn-lg" %>
+                <%= f.submit "参加する", class: "w-100 btn btn-primary btn-lg" %>
               <% end %>
             <% end %>
           </div>
