--- a/app/assets/stylesheets/event_listings.scss
+++ b/app/assets/stylesheets/event_listings.scss
@@ -1,3 +1,12 @@
 .eventlisting {
     max-width: 960px;
   }
+.eventlisting-edit-btn{
+  border: none;
+  border-radius: 1.5rem;
+  width: 100%;
+  padding: 1rem;
+  font-weight: 600;
+  color: #6c757d;
+  cursor: pointer;
+}
