--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -30,12 +30,13 @@
     </div>
     <div class="col-lg-4">
       <div class="card mb-4">
+      <div class="card-header">検索</div>
         <%= search_form_for @q, url: search_events_path do |f| %>
           <div class="card-body">
             <%= f.search_field :match_or_location_cont,class: "form-control",placeholder:"例：巨人,バンテリンドーム..." %>
-            <div class="form-control">
+            <div class="form-control text-center">
               <%= f.date_field :date_gteq %>
-              <span>~</span>
+              <span>〜</span>
               <%= f.date_field :date_lteq %>
             </div>
             <%= f.submit "検索", class: "btn btn-primary form-control" %>
