--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -14,7 +14,6 @@
             <%= render 'shared/event_listing_card', event_listing: event_listing %>
           </div>
         <% end %>
-        
       </div>
       <nav aria-label="Pagination">
         <hr class="my-0" />
@@ -34,34 +33,17 @@
               <span>〜</span>
               <%= f.date_field :date_lteq %>
             </div>
+            <div class="form-control">
+              <%= f.label :match_eq, "対戦チーム" %>
+              <%= f.select :match_eq, @matches,:include_blank => '指定なし' %>
+            </div>
+            <div class="form-control">
+            <%= f.label :location_eq, "野球場" %>
+            <%= f.select :location_eq, @locations,:include_blank => '指定なし' %>
+          </div>
             <%= f.submit "検索", class: "btn btn-primary form-control" %>
           </div>
         <% end %>
-      </div>
-      <div class="card mb-4">
-        <div class="card-header">Categories</div>
-        <div class="card-body">
-          <div class="row">
-            <div class="col-sm-6">
-              <ul class="list-unstyled mb-0">
-                <li><a href="#!">Web Design</a></li>
-                <li><a href="#!">HTML</a></li>
-                <li><a href="#!">Freebies</a></li>
-              </ul>
-            </div>
-            <div class="col-sm-6">
-              <ul class="list-unstyled mb-0">
-                <li><a href="#!">JavaScript</a></li>
-                <li><a href="#!">CSS</a></li>
-                <li><a href="#!">Tutorials</a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="card mb-4">
-        <div class="card-header">Side Widget</div>
-        <div class="card-body">You can put anything you want inside of these side widgets. They are easy to use, and feature the Bootstrap 5 card component!</div>
       </div>
     </div>
   </div>
