--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,9 +1,11 @@
-<% provide(:title,"イベント投稿")%>
+<% provide(:title,"イベント投稿") %>
 <div class="container eventlisting">
   <main>
     <div class="row py-5 justify-content-center">
       <div class="col-md-6 col-lg-8">
         <%= render 'shared/error_messages', object: @event_listing %>
+        <%= link_to "観戦日選択へ戻る", events_path, class: "eventlisting-edit-btn" %>
+        <hr class="my-2">
         <ul class="list-group list-group-light">
           <li class="list-group-item">
             <div class="fw-bold"><%= @event.match %></div>
