--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,14 @@
 <% provide(:title,'ユーザー詳細') %>
 <div class="container emp-profile">
+  <% if @user == current_user %>
   <div class="row justify-content-end">
     <div class="col-md-2">
       <%= link_to "ユーザー編集", edit_user_registration_path, class: "profile-edit-btn" %>
     </div>
   </div>
   <hr class="mb-4">
-  <div class="row">
+  <% end %>
+  <div class="row justify-content-center">
     <div class="col-md-4">
       <div class="profile-img">
         <%= image_tag @user.profile_image.url %>
@@ -45,6 +47,26 @@
           <div class="col-md-8">
             <p><%= @user.self_introduction %></p>
           </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-10 py-5">
+      <nav>
+        <div class="nav nav-tabs nav-fill" id="nav-tab" role="tablist">
+            <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">募集したイベント</button>
+            <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">参加するイベント</button>
+        </div>
+      </nav>
+      <div class="tab-content py-3 px-3 px-sm-0" id="nav-tabContent">
+        <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
+        <% @event_listings.each do |event_listing|%>
+            <%= render 'shared/event_listing_card', event_listing: event_listing %>
+          <% end %>
+        </div>
+        <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
+        <% @event_registrations.each do |registration|%>
+          <%= render 'shared/event_listing_card', event_listing: registration.event_listing %>
+        <% end %>
         </div>
       </div>
     </div>
