--- a/app/views/events/filtered_index.html.erb
+++ b/app/views/events/filtered_index.html.erb
@@ -1,27 +1,31 @@
 <div class="container d-flex justify-content-center">
-  <div class="row col-md-8 custyle">
+  <div class="row col-md-8 custyle ">
     <table class="table table-striped custab">
       <thead>
         <tr class="text-center">
           <th>日付</th>
           <th>開始時間</th>
           <th>チーム</th>
-          <th>場所</th>
+          <th>場所</th> 
           <th></th>
         </tr>
       </thead>
-      <% @events.each do |event| %>
-        <tr class="text-center">
+      <% if @results.blank? %>
+        <h4 class="text-center py-5">該当する検索結果がありませんでした</h4>
+      <% else %>
+        <% @results.each do |event| %>
+          <tr class="text-center">
           <td><%= event.date.strftime("%m/%d") %></td>
-          <td><%= event.start_time.strftime("%H:%M") %></td>
+          <td><%= event.start_time.strftime("%H:%M")%></td>
           <td><%= event.match %></td>
           <td><%= event.location %></td>
-          <td><%= link_to "募集", event, class: "btn btn-primary btn-xs" %></td>
-        </tr>
+          <td><%= link_to "募集", event,class:"btn btn-primary btn-xs" %></td>
+          </tr>
+        <% end %>
       <% end %>
     </table>
     <ul class="pagination justify-content-center my-4">
-      <%= will_paginate @events %>
+      <%= will_paginate @results %>
     </ul>
     <div class="card my-4">
       <div class="card-header">検索</div>
