--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -11,7 +11,7 @@
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">メニュー</a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><%= link_to "マイページ", user_path(current_user), class: "dropdown-item" %></li>
-              <li><a class="dropdown-item" href="#">設定</a></li>
+              <li><a class="dropdown-item" href="/events">募集投稿</a></li>
               <li><hr class="dropdown-divider" /></li>
               <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "dropdown-item" %></li>
             </ul>
